--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <html>
-
+<head>
+    <title>Dasmoto&#39;s Arts &amp; Crafts</title>
+    <link href="./css/style.css" type="text/css" rel="stylesheet"/>
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content= 
+        "width=device-width, initial-scale=1.0">
+  </head>
 <body>
   <h1>Charlie C</h1>
   <p>Welcome to my first GitHub project website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+
+<p>This text should be red.</p>
+  
 </body>
 
 </html>
