--- a/index.html
+++ b/index.html
@@ -7,14 +7,30 @@
         "width=device-width, initial-scale=1.0">
   </head>
 <body>
-  <h1>Charlie C</h1>
-  <p>Welcome to my first GitHub project website!</p>
-  <!--
-    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-  -->
+<header>
+    <!-- Navigation Section -->
+    <nav>
+      <div><img class="imglogo" src="https://screamer2.com/codecademy/dasmoto_arts_crafts/images/dasmotos_logo_clr.png" alt="Dasmoto's Arts logo" width="420">
+      </div>
+      <div class="nav-items">
+        <ul class="overview">
+        <li><a href="#question_1">Link</a></li>
+        <li><a href="#question_2">Link</a></li>
+        <li><a href="#question_3">Link</a></li>
+        <li><a href="#question_4">Link</a></li>
+        <li><a href="#question_5">Link</a></li>
+      </ul>
+    </nav>
+    </div>
+  <!-- End Navigation Section -->
+    </header>  
 
-<p>This text should be red.</p>
-  
+
+
+
+
+
+    
 </body>
 
 </html>
